--- a/DanicoSolution/DanicoProject/Web.config
+++ b/DanicoSolution/DanicoProject/Web.config
@@ -46,5 +46,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings><add name="DanicoCon" connectionString="metadata=res://*/Models.Hotel.csdl|res://*/Models.Hotel.ssdl|res://*/Models.Hotel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=EAFIT-7456BE319\DANICO;Initial Catalog=Danico;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /><add name="DanicoEntities" connectionString="metadata=res://*/Models.Town.csdl|res://*/Models.Town.ssdl|res://*/Models.Town.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=EAFIT-7456BE319\DANICO;Initial Catalog=Danico;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /><add name="DanicoAllCon" connectionString="metadata=res://*/Models.All.csdl|res://*/Models.All.ssdl|res://*/Models.All.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=EAFIT-7456BE319\DANICO;Initial Catalog=Danico;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="conection" connectionString="metadata=res://*/Models.Hotel.csdl|res://*/Models.Hotel.ssdl|res://*/Models.Hotel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=C-C-PC\SQLEXPRESS;initial catalog=Danico;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
