--- a/DanicoSolution/DanicoProject/DanicoProject.csproj
+++ b/DanicoSolution/DanicoProject/DanicoProject.csproj
@@ -98,16 +98,6 @@
     <Content Include="Content\images\danico\comida2.png" />
     <Content Include="Content\images\danico\divider.gif" />
     <Content Include="Content\images\danico\footer-bg.gif" />
-    <Content Include="Content\images\danico\full-sizes\page3-img1-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img10-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img2-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img3-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img4-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img5-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img6-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img7-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img8-full.jpg" />
-    <Content Include="Content\images\danico\full-sizes\page3-img9-full.jpg" />
     <Content Include="Content\images\danico\internet.png" />
     <Content Include="Content\images\danico\lavanderia.png" />
     <Content Include="Content\images\danico\link-bg.gif" />
@@ -174,6 +164,13 @@
     <Content Include="Content\images\Hotels\hotel14\page3-img1.jpg" />
     <Content Include="Content\images\Hotels\hotel14\page3-img4.jpg" />
     <Content Include="Content\images\Hotels\hotel14\page3-img5.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img1-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\page2-img0.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\page3-img1.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\page3-img2.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\page3-img4.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\page3-img5.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\page4-img1.jpg" />
     <Content Include="Content\jQuery\jsTheme\camera.js" />
     <Content Include="Content\jQuery\jsTheme\excanvas.js" />
     <Content Include="Content\jQuery\jsTheme\greyScale.js" />
@@ -262,12 +259,6 @@
     <Content Include="Views\Home\Search1.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="Models\All.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>All.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Hotel\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -289,6 +280,10 @@
     <None Include="Content\css\cssTheme\fonts\optima-webfont.eot" />
     <None Include="Content\css\cssTheme\fonts\optima-webfont.ttf" />
     <None Include="Content\css\cssTheme\fonts\optima-webfont.woff" />
+    <EntityDeploy Include="Models\All.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>All.Designer.cs</LastGenOutput>
+    </EntityDeploy>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
