--- a/DanicoSolution/DanicoProject/DanicoProject.csproj
+++ b/DanicoSolution/DanicoProject/DanicoProject.csproj
@@ -140,6 +140,44 @@
     <Content Include="Content\images\danico\stard.png" />
     <Content Include="Content\images\danico\submit-bt.png" />
     <Content Include="Content\images\danico\tarjetas.png" />
+    <Content Include="Content\images\danico\themePhotos\dark_rounded\btnNext.png" />
+    <Content Include="Content\images\danico\themePhotos\dark_rounded\btnPrevious.png" />
+    <Content Include="Content\images\danico\themePhotos\dark_rounded\contentPattern.png" />
+    <Content Include="Content\images\danico\themePhotos\dark_rounded\default_thumbnail.gif" />
+    <Content Include="Content\images\danico\themePhotos\dark_rounded\loader.gif" />
+    <Content Include="Content\images\danico\themePhotos\dark_rounded\sprite.png" />
+    <Content Include="Content\images\danico\themePhotos\dark_square\btnNext.png" />
+    <Content Include="Content\images\danico\themePhotos\dark_square\btnPrevious.png" />
+    <Content Include="Content\images\danico\themePhotos\dark_square\contentPattern.png" />
+    <Content Include="Content\images\danico\themePhotos\dark_square\default_thumbnail.gif" />
+    <Content Include="Content\images\danico\themePhotos\dark_square\loader.gif" />
+    <Content Include="Content\images\danico\themePhotos\dark_square\sprite.png" />
+    <Content Include="Content\images\danico\themePhotos\default\default_thumb.png" />
+    <Content Include="Content\images\danico\themePhotos\default\loader.gif" />
+    <Content Include="Content\images\danico\themePhotos\default\sprite.png" />
+    <Content Include="Content\images\danico\themePhotos\default\sprite_next.png" />
+    <Content Include="Content\images\danico\themePhotos\default\sprite_prev.png" />
+    <Content Include="Content\images\danico\themePhotos\default\sprite_x.png" />
+    <Content Include="Content\images\danico\themePhotos\default\sprite_y.png" />
+    <Content Include="Content\images\danico\themePhotos\facebook\btnNext.png" />
+    <Content Include="Content\images\danico\themePhotos\facebook\btnPrevious.png" />
+    <Content Include="Content\images\danico\themePhotos\facebook\contentPatternBottom.png" />
+    <Content Include="Content\images\danico\themePhotos\facebook\contentPatternLeft.png" />
+    <Content Include="Content\images\danico\themePhotos\facebook\contentPatternRight.png" />
+    <Content Include="Content\images\danico\themePhotos\facebook\contentPatternTop.png" />
+    <Content Include="Content\images\danico\themePhotos\facebook\default_thumbnail.gif" />
+    <Content Include="Content\images\danico\themePhotos\facebook\loader.gif" />
+    <Content Include="Content\images\danico\themePhotos\facebook\sprite.png" />
+    <Content Include="Content\images\danico\themePhotos\light_rounded\btnNext.png" />
+    <Content Include="Content\images\danico\themePhotos\light_rounded\btnPrevious.png" />
+    <Content Include="Content\images\danico\themePhotos\light_rounded\default_thumbnail.gif" />
+    <Content Include="Content\images\danico\themePhotos\light_rounded\loader.gif" />
+    <Content Include="Content\images\danico\themePhotos\light_rounded\sprite.png" />
+    <Content Include="Content\images\danico\themePhotos\light_square\btnNext.png" />
+    <Content Include="Content\images\danico\themePhotos\light_square\btnPrevious.png" />
+    <Content Include="Content\images\danico\themePhotos\light_square\default_thumbnail.gif" />
+    <Content Include="Content\images\danico\themePhotos\light_square\loader.gif" />
+    <Content Include="Content\images\danico\themePhotos\light_square\sprite.png" />
     <Content Include="Content\images\Hotels\1.jpg" />
     <Content Include="Content\images\Hotels\10.jpg" />
     <Content Include="Content\images\Hotels\11.jpg" />
@@ -165,6 +203,15 @@
     <Content Include="Content\images\Hotels\hotel14\page3-img4.jpg" />
     <Content Include="Content\images\Hotels\hotel14\page3-img5.jpg" />
     <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img1-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img10-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img2-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img3-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img4-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img5-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img6-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img7-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img8-full.jpg" />
+    <Content Include="Content\images\Hotels\hotel4\fullsize\page3-img9-full.jpg" />
     <Content Include="Content\images\Hotels\hotel4\page2-img0.jpg" />
     <Content Include="Content\images\Hotels\hotel4\page3-img1.jpg" />
     <Content Include="Content\images\Hotels\hotel4\page3-img2.jpg" />
@@ -285,6 +332,7 @@
       <LastGenOutput>All.Designer.cs</LastGenOutput>
     </EntityDeploy>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
