flex completed added button "solicitar cotizacion" about completed

--- a/DanicoSolution/DanicoProject/DanicoProject.csproj
+++ b/DanicoSolution/DanicoProject/DanicoProject.csproj
@@ -98,6 +98,39 @@
     <Content Include="Content\images\danico\bg-black.png" />
     <Content Include="Content\images\danico\body-bg.gif" />
     <Content Include="Content\images\danico\caja.png" />
+    <Content Include="Content\images\danico\col1.png" />
+    <Content Include="Content\images\danico\col10.png" />
+    <Content Include="Content\images\danico\col11.png" />
+    <Content Include="Content\images\danico\col12.png" />
+    <Content Include="Content\images\danico\col13.png" />
+    <Content Include="Content\images\danico\col14.png" />
+    <Content Include="Content\images\danico\col15.png" />
+    <Content Include="Content\images\danico\col16.png" />
+    <Content Include="Content\images\danico\col17.png" />
+    <Content Include="Content\images\danico\col18.png" />
+    <Content Include="Content\images\danico\col19.png" />
+    <Content Include="Content\images\danico\col2.png" />
+    <Content Include="Content\images\danico\col20.png" />
+    <Content Include="Content\images\danico\col21.png" />
+    <Content Include="Content\images\danico\col22.png" />
+    <Content Include="Content\images\danico\col23.png" />
+    <Content Include="Content\images\danico\col24.png" />
+    <Content Include="Content\images\danico\col25.png" />
+    <Content Include="Content\images\danico\col26.png" />
+    <Content Include="Content\images\danico\col27.png" />
+    <Content Include="Content\images\danico\col28.png" />
+    <Content Include="Content\images\danico\col29.png" />
+    <Content Include="Content\images\danico\col3.png" />
+    <Content Include="Content\images\danico\col30.png" />
+    <Content Include="Content\images\danico\col31.png" />
+    <Content Include="Content\images\danico\col32.png" />
+    <Content Include="Content\images\danico\col4.png" />
+    <Content Include="Content\images\danico\col40.png" />
+    <Content Include="Content\images\danico\col5.png" />
+    <Content Include="Content\images\danico\col6.png" />
+    <Content Include="Content\images\danico\col7.png" />
+    <Content Include="Content\images\danico\col8.png" />
+    <Content Include="Content\images\danico\col9.png" />
     <Content Include="Content\images\danico\comida2.png" />
     <Content Include="Content\images\danico\divider.gif" />
     <Content Include="Content\images\danico\footer-bg.gif" />
